tests/NormalTests/paczka1/small_fuzzy/99497978.err
Error in line 1: zk8iNnMUy3 S197 78,91
Error in line 4: E0hfIDCl5I S197 58,7
